refactor: port customization from neoforge
(cherry picked from commit b12049058f79a5e86485ad59f1a66d1bac4f5122)

# Conflicts:
#	gradle.properties
#	src/main/java/snownee/kiwi/util/BlockPredicateHelper.java